--- a/contact.html
+++ b/contact.html
@@ -38,24 +38,6 @@
 	<div class="divider2 cD">...</div>
 	<div class="separation2"></div>
 	</div>
-	
-	
-<!-- Gallery
-	<div id="mygallery" class="stepcarousel">
-		<div class="belt beltPost2" id="belt">
-        	<div class="panels">
-                <img class="panelimg" src="assets/tst1.png" />
-                <img class="panelimg" src="assets/tst2.png" />
-                <img class="panelimg" src="assets/tst3.png" />
-                <img class="panelimg" src="assets/tst4.png" />
-            </div>
-		</div>
-		<div class="beltbtns">
-		<p class="beltbtn beltbtnup" onclick="belt_moveup(getByID('belt'), 4)" ></p>
-		<p class="beltbtn beltbtndown" onclick="belt_movedown(getByID('belt'), 4)" ></p>
-		</div>
-	</div>
-End of Gallery-->
 
 </div>
 
@@ -68,11 +50,12 @@ End of Gallery-->
 	<ul class="mnu_side">
 		<li onmouseover="include_space('1')" onmouseout="exclude_space('1')" ><a href="index.html"><span class="space" id="space1">-</span>Home</a></li>
 		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="about.html"><span class="space" id="space2">-</span>About</a></li>
-		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="education.html"><span class="space" id="space3">-</span>Education</a></li>
-		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="skills.html"><span class="space" id="space4">-</span>Skills</a></li>
-		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="hobbies.html"><span class="space" id="space6">-</span>Hobbies</a></li>
-		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="capstone.html"><span class="space" id="space7">-</span>Capstone</a></li>
-		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="contact.html"><span class="space" id="space8">-</span>Contact</a></li>
+		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="resume.html"><span class="space" id="space3">-</span>Resume</a></li>
+		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="education.html"><span class="space" id="space4">-</span>Education</a></li>
+		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="skills.html"><span class="space" id="space5">-</span>Skills</a></li>
+		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="hobbies.html"><span class="space" id="space6">-</span>Hobbies</a></li>
+		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="capstone.html"><span class="space" id="space7">-</span>Capstone</a></li>
+		<li onmouseover="include_space('8')" onmouseout="exclude_space('8')" ><a href="contact.html"><span class="space" id="space8">-</span>Contact</a></li>
 	</ul>
 
 </div>
