--- a/education.html
+++ b/education.html
@@ -54,11 +54,12 @@
 	<ul class="mnu_side">
 		<li onmouseover="include_space('1')" onmouseout="exclude_space('1')" ><a href="index.html"><span class="space" id="space1">-</span>Home</a></li>
 		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="about.html"><span class="space" id="space2">-</span>About</a></li>
-		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="education.html"><span class="space" id="space3">-</span>Education</a></li>
-		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="skills.html"><span class="space" id="space4">-</span>Skills</a></li>
-		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="hobbies.html"><span class="space" id="space6">-</span>Hobbies</a></li>
-		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="capstone.html"><span class="space" id="space7">-</span>Capstone</a></li>
-		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="contact.html"><span class="space" id="space8">-</span>Contact</a></li>
+		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="resume.html"><span class="space" id="space3">-</span>Resume</a></li>
+		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="education.html"><span class="space" id="space4">-</span>Education</a></li>
+		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="skills.html"><span class="space" id="space5">-</span>Skills</a></li>
+		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="hobbies.html"><span class="space" id="space6">-</span>Hobbies</a></li>
+		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="capstone.html"><span class="space" id="space7">-</span>Capstone</a></li>
+		<li onmouseover="include_space('8')" onmouseout="exclude_space('8')" ><a href="contact.html"><span class="space" id="space8">-</span>Contact</a></li>
 	</ul>
 
 </div>
