--- a/about.html
+++ b/about.html
@@ -30,17 +30,17 @@
 	<div class="divider">...<br>...</div>
 	
 	<div class="headline centext">| - - - - - About - - - - - |</div>
-	<div class="additional centext">[ Last Updated: 1/23/17 ]</div>
+	<div class="additional centext">[ Last Updated: 1/25/17 ]</div>
 	<div class="separation"></div>
 	<div class="centext dark">
 	<div class="divider2 cD">...</div>
-	<div class="description" style="font-size: 16px;">I am Armando Campos, the creator and subject of this website. I'm 17 and a senior at Riverside Poly High School. Within this website is my portfolio, containing a brief history of my experiences within the last few years. This is simply a quick overview of my life as my time left in high school comes to an end.</div>
+	<div class="description" style="font-size: 16px;">I am Armando Campos, the creator and subject of this website. I'm 17 and a senior at Riverside Poly High School. Within this website is my portfolio, containing a brief history of my experiences within the last few years. This is simply a quick overview of my life as my time left in high school comes to an end. Much of the important stuff about me can be learned from this portfolio. This site was created with the intention of readers getting a better understanding of me.</div>
 	<div class="divider2 cD">...</div>
 	<div class="separation2"></div>
 	</div>
 	<div class="divider2">...</div>
-	<div class="para">???</div>
-	<div class="divider centext cD">work in progress</div>
+	<img class="photoS centered" src="assets/me.jpg" />
+	<div class="additional centext">Armando Campos</div>
 
 </div>
 
