--- a/hobbies.html
+++ b/hobbies.html
@@ -30,10 +30,16 @@
 	<div class="divider">...<br>...</div>
 	
 	<div class="headline centext">| - - - - - Hobbies - - - - - |</div>
-	<div class="additional centext">[ Last Updated: 1/23/17 ]</div>
+	<div class="additional centext">[ Last Updated: 1/25/17 ]</div>
 	<div class="separation"></div>
-	<div class="para">In my spare time...</div>
-	<div class="divider centext cD">work in progress</div>
+	<div class="para">In my spare time I'll most likely be found doing something productive or one of my favorite activities...</div>
+	<div class="separation2"></div>
+	<div class="additional centext">Playing Video Games</div>
+	<div class="para">I've always been attracted to video games, my involvement with them has never died down over the years.</div>
+	<div class="additional centext">Developing Video Games</div>
+	<div class="para">More often than playing games, I am found developing my own. I am obsessed with expressing my creativity through my code and art, bringing projects to life in my free time. I have developed games for Windows and Android, having released a game on the Google Play Store. These personal projects are private.</div>
+	<div class="additional centext">Other Stuff</div>
+	<div class="para">When I'm wasting time I'll be seen scrolling through forums, interacting in online communities, talking to friends, or just enjoying some entertainment.</div>
 
 </div>
 
