--- a/skills.html
+++ b/skills.html
@@ -45,12 +45,37 @@
 				<img class="photoS" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/120px-HTML5_logo_and_wordmark.svg.png" />
 				<div class="additional cG">[ HTML5 ]</div>
 			</div>
+			<div class="imglsti">
+				<img class="photoS" src="https://www.python.org/static/opengraph-icon-200x200.png" />
+				<div class="additional cG">[ Python ]</div>
+			</div>
+			<div class="imglsti">
+				<img class="photoS" src="https://www.lua.org/images/lua.gif" />
+				<div class="additional cG">[ Lua ]</div>
+			</div>
 		</div>
-		<div class="divider2 cD">...</div>
 		<div class="separation2"></div>
 	</div>
 	<div class="centext">Software</div>
 	<div class="para centext">I use a variety of software in order when working on personal projects. For Image Editing I stick to <a href="http://www.adobe.com/products/photoshop.html" target="none">Adobe Photoshop</a> and have years of experience with it. For Video Editing my preference is to use <a href="http://www.sonycreativesoftware.com/" target="none">Sony Vegas</a> and <a href="http://www.adobe.com/products/aftereffects.html" target="none">Adobe After Effects</a>. When it comes to Audio Editing, I rely on the use of Audacity. When programming I often will use an IDE or just a basic text editor like <a href="https://notepad-plus-plus.org/" target="none">NotePad++</a> or <a href="https://www.sublimetext.com/" target="none">SublimeText</a>. For Java my favorite IDE is <a href="https://www.jetbrains.com/idea/" target="none">IntelliJ by JetBrains</a>.</div>
+	<div class="dark centext">
+		<div class="divider2 cD">...</div>
+		<div class="imglst">
+			<div class="imglsti">
+				<img class="photoS" src="http://www.thaiware.com/upload_misc/software/2014_09/thumbnails/1427_161026111243v1.png" />
+				<div class="additional cG">[ Adobe Photoshop ]</div>
+			</div>
+			<div class="imglsti">
+				<img class="photoS" src="https://files.graphiq.com/727/media/images/Adobe_After_Effects_CS6_736793_i0.jpg" />
+				<div class="additional cG">[ Adobe After Effects ]</div>
+			</div>
+			<div class="imglsti">
+				<img class="photoS" src="https://confluence.jetbrains.com/download/attachments/10818/IDEADEV?version=6&modificationDate=1449747979000&api=v2" />
+				<div class="additional cG">[ IntelliJ ]</div>
+			</div>
+		</div>
+		<div class="separation2"></div>
+	</div>
 
 </div>
 
