--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
-<!-- ©2017 Armando Campos -->
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-<title>Armando Campos Senior Capstone Portfolio</title>
+<title>Portfolio</title>
 <style>
 @import url(index.css);
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
@@ -30,35 +29,35 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="headline centext">| - - - - - MISSION STATEMENT - - - - - |</div>
+	<div class="headline centext">| - - - - - Portfolio - - - - - |</div>
+	<div class="additional centext">[ Last Updated: 1/23/17 ]</div>
 	<div class="separation"></div>
+	<div class="centext dark">
+	<div class="divider2 cD">...</div>
+	<div class="description">This is a personal portfolio for me, <a href="about.html">Armando Campos</a>.</div>
+	<div class="divider2 cD">...</div>
+	<div class="separation2"></div>
+	</div>
 	<div class="divider2">...</div>
 	<div class="dark centext">
-		<div class="divider2 cD">...</div>
-		<div class="para" style="padding: 0px 8px;">As I approach the end of my high school experience, now would be the best time to look back and acknowledge my academic history of these last few years. Through the creation of this compilation I will be able to delve into my recent past and share my personal story through this website. This documentation will contain a series of my works and will be the best depiction of my creations.</div>
-		<div class="divider2 cD">...</div>
-		<div class="separation2"></div>
-	</div>
-	<img class="centered photoS" src="assets/id_me.jpg"/>
-	<div class="note centext">Armando Campos<br>English Literature (12th Grade)<br>Instructor: Mrs. Yeyna<br>Riverside Poly High School<br>Class of 2017</div>
-	<div class="dark centext">
-		<div class="divider2 cD">...</div>
-		<div class="additional cG">[ Table of Contents ]</div>
-		<ul id="toc" class="cYd">
-			<li><a href="pride.html" class="cY">Pride</a></li>
-			<li><a href="origin.html" class="cY">Origin</a></li>
-			<li><a href="belief.html" class="cY">Statement of Belief</a></li>
-			<li><a href="research.html" class="cY">Quest Research</a></li>
-			<li><a href="practicum.html" class="cY">Quest Practicum</a></li>
-		</ul>
-		<div class="divider2 cD">...</div>
-		<div class="separation2"></div>
+	<div class="divider2 cD">...</div>
+	<div class="additional cG">[ Table of Contents ]</div>
+	<ul id="toc" class="cYd">
+		<li><a href="about.html" class="cY">About</a></li>
+		<li><a href="resume.html" class="cY">Resume</a></li>
+		<li><a href="education.html" class="cY">Education</a></li>
+		<li><a href="skills.html" class="cY">Skills</a></li>
+		<li><a href="hobbies.html" class="cY">Hobbies</a></li>
+		<li><a href="capstone.html" class="cY">Capstone</a></li>
+		<li><a href="contact.html" class="cY">Contact</a></li>
+	</ul>
+	<div class="divider2 cD">...</div>
+	<div class="separation2"></div>
 	</div>
 
 </div>
 
 <div id="footer">
-	<div class="additional centext">[ Last Updated: 3/2/17 ]</div>
 	©2017 Armando Campos
 </div>
 
@@ -66,11 +65,13 @@
 
 	<ul class="mnu_side">
 		<li onmouseover="include_space('1')" onmouseout="exclude_space('1')" ><a href="index.html"><span class="space" id="space1">-</span>Home</a></li>
-		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="pride.html"><span class="space" id="space2">-</span>Pride</a></li>
-		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="origin.html"><span class="space" id="space3">-</span>Origin</a></li>
-		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="belief.html"><span class="space" id="space4">-</span>Statement<br>of Belief</a></li>
-		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="research.html"><span class="space" id="space5">-</span>Research</a></li>
-		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="practicum.html"><span class="space" id="space6">-</span>Practicum</a></li>
+		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="about.html"><span class="space" id="space2">-</span>About</a></li>
+		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="resume.html"><span class="space" id="space3">-</span>Resume</a></li>
+		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="education.html"><span class="space" id="space4">-</span>Education</a></li>
+		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="skills.html"><span class="space" id="space5">-</span>Skills</a></li>
+		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="hobbies.html"><span class="space" id="space6">-</span>Hobbies</a></li>
+		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="capstone.html"><span class="space" id="space7">-</span>Capstone</a></li>
+		<li onmouseover="include_space('8')" onmouseout="exclude_space('8')" ><a href="contact.html"><span class="space" id="space8">-</span>Contact</a></li>
 	</ul>
 
 </div>
